Added get email by id endpoint
